src/components/WalletLink/WalletLink.module.scss
@import '~@santiment-network/ui/mixins';

.wrapper {
  list-style-type: none;
  padding: 0 1rem;

  li:first-child {
    margin-bottom: 1rem;
  }
}

.etherscanLink {
  @include text('body-3');
}

.link {
  color: var(--jungle-green);

  &:hover {
    color: var(--jungle-green-hover);
  }
}

